# second-brain

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: cloudflared.yml
scripts/: deploy.sh
src/second_brain/: cli.py
src/second_brain/api/: app.py  auth.py  metrics.py  streaming.py
src/second_brain/core/: config.py  llm.py
src/second_brain/parsers/: documents.py
src/second_brain/rag/: chunker.py  embedder.py  knowledge_base.py  store.py
src/second_brain/storage/: database.py  models.py
tests/: test_api.py  test_auth.py  test_chunker.py  test_integration.py  test_metrics.py  test_parsers.py
